--- a/pack/electron/package.json
+++ b/pack/electron/package.json
@@ -9,7 +9,7 @@
     "electron-updater": "4.6.5",
     "font-list": "^1.4.5"
   },
-  "repository": "github:qishibo/AnotherRedisDesktopManager",
+  "repository": "github:TanNhatCMS/AnotherRedisDesktopManager",
   "build": {
     "appId": "me.qii404.another-redis-desktop-manager",
     "productName": "Another Redis Desktop Manager",
@@ -28,7 +28,7 @@
     ],
     "publish": [{
       "provider": "github",
-      "owner": "qishibo",
+      "owner": "TanNhatCMS",
       "repo": "AnotherRedisDesktopManager",
       "releaseType": "prerelease"
     }],
